# py-simple-shooter

./: .flake8  .gitignore  MANIFEST.in  README.md  config.py  dodo.py  game.py  interaction.py  main.py  player.py  pyproject.toml  rendering.py  requirements-dev.txt  requirements.txt  setup.cfg
docs/: conf.py  config.rst  game.rst  index.rst  interaction.rst  menu.rst  player.rst  rendering.rst  settings.rst  sprites.rst
menu/: game.py  main.py  menu.py  settings.json  settings.py  test_pydantic.py
po/en/LC_MESSAGES/: py-simple-shooter.mo
po/ru/LC_MESSAGES/: py-simple-shooter.mo
shooter/: __main__.py  config.py  game.py  interaction.py  player.py  rendering.py  settings.py  sprites.py  translation.py
shooter/locale/en/LC_MESSAGES/: shooter.po
shooter/locale/ru/LC_MESSAGES/: shooter.po
shooter/menu/: menu.py  settings.json
src/py-simple-shooter/: game.py  interaction.py  rendering.py  settings.py  sprites.py
src/py-simple-shooter/locale/en/LC_MESSAGES/: py-simple-shooter.po
src/py-simple-shooter/locale/ru/LC_MESSAGES/: py-simple-shooter.po
src/py-simple-shooter/menu/: menu.py
