[metadata]
name = py-simple-shooter
version = 0.0.1
author = Kozlov, Larochkin
author_email = 
description = A small 2.5D game 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koz1ov/py-simple-shooter
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = ==3.7, <4
install_requires = 
    pygame
    pydantic

[options.entry_points]
console_scripts =

[options.package_data]
shooter = *.mo, *.json, *.png, *.ttf
