[metadata]
name = shooter
version = 0.0.1
author = Kozlov, Larochkin
author_email = kostebo98@mail.ru, plarochkin@gmail.com
description = A small 2.5D shooter 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koz1ov/py-simple-shooter
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = ==3.9.*
install_requires = 
    pygame
    pydantic

[options.entry_points]
console_scripts =
    shooter = shooter.__main__:main
[options.package_data]
shooter = locale/en/LC_MESSAGES/*.mo, locale/ru/LC_MESSAGES/*.mo, menu/*.json, pics/*.png, fonts/*.ttf, audio/*.mp3

[pydocstyle]
match-dir=shooter
